[tool.poetry]
name = "cw4"
version = "0.1.0"
description = ""
authors = ["Лиза Герман <liza36046@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.0.3"
jss = "^0.1.0"
utl = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
